SubVersion: $Id$

Log of changes:	tilp (cables, calcs, files, ticonv)

- 09/05/2006, version 0.12 (0.0.9, 0.1.1, 0.1.3, 0.0.3): roms
	- fixed bug in the use of USB auto-detect
	- rename 'Ready' button into 'Connect' when using DirectLink
	- update remote frame in the action box

- 06/05/2006, version 0.11 (0.0.9, 0.1.1, 0.1.3, 0.0.3): roms
	- added a new label which display RAM/FLASH free &used
	- show more levels in the current path
	- reworked/factorized opening/closing of device
	- auto-detect USB devices at startup
	- reworked full auto-detection

- 15/04/2006, version 0.10 (0.0.7, 0.1.0, 0.1.2, 0.0.3): roms
	- follows ticalcs2 changes in the API
	- added Titanium USB hand-held support
	- reworked displaying of Hand-Held Informations box

- 03/04/2006, version 0.09 (0.0.7, 0.0.8, 0.1.2, 0.0.3): roms
	- added TI84+ USB hand-held support
	- re-map 0x2080..9 chars into the ctree

- 03/02/2006, version 0.08 (0.0.7, 0.0.6, 0.1.0, 0.0.1): roms (testing phase: ~260 tests)
	- the right view did not filter file types correctly
	- user's suggestion: automatically change for detected cable/calc.
	- fixed displaying of greek chars in the action dbox.
	- can't load pdf/eps files
	- clamp gtk_update.cnt2 to avoid warnings
	- fixed group filename (recently modified but not propagated).
	- don't update dirlist with TI82/85
	- don't display hw revision for TI8x calcs
	- fixed the command line argument passing in the InnoSetup script (shell registering)

- 21/02/2006, version 0.07 (0.0.6, 0.0.5, 0.0.9, 0.0.1): roms
	- switched to ticonv library
	- fixed bug with the re-target folder feature.
	- make hand-held goes to HOME when not ready (kevin)
	- implemented feature request: "TiLP always gets a list of the files on the calc, even if I already " (T. Evans)
	- when ticables/ticalcs error occurs: reset cable and wait for 0.5s (i/o link active -> disappear)
	- don't use cable_handle & calc_handle fields: they are private
	- fixed command line