@@ -6,6 +6,7 @@ Log of changes:	tilp (cables, calcs, files, ticonv)
 	- fixed bug in the use of USB auto-detect
 	- rename 'Ready' button into 'Connect' when using DirectLink
 	- update remote frame in the action box
+	- update memory used when sending/deleting variables
 
 - 06/05/2006, version 0.11 (0.0.9, 0.1.1, 0.1.3, 0.0.3): roms
 	- added a new label which display RAM/FLASH free &used
